# OS-Practice

./: README.md  scheduling.cpp
deadlock/Banker_s2/: Banker_sItem.cpp  Banker_sItem.h  CMakeLists.txt  main.cpp
scheduling/: scheduling  scheduling.cpp  test.txt
semaphore/: Producer-Consumer1.cpp  Producer-Consumer2.cpp  Producer-Consumer3.cpp  Reader-Writer.cpp
